Home page alignment and contact us form fixes.

--- a/marketing-lead2loyalty/apps-lead2loyalty/ui.apps/src/main/content/jcr_root/apps/lead2loyalty/components/content/clientlibs/lead2loyalty-homepage/css/lead2loyalty.css
+++ b/marketing-lead2loyalty/apps-lead2loyalty/ui.apps/src/main/content/jcr_root/apps/lead2loyalty/components/content/clientlibs/lead2loyalty-homepage/css/lead2loyalty.css
@@ -799,6 +799,14 @@ h5.card-title,h5.card-text {
     padding:0 36px;
 }
 
+.molecule-spacing {
+    padding:12px 10px;
+}
+
+.atm--text ul li {
+	list-style-type:disc;
+}
+
 @media screen and (min-width:769px) {
     .dropend:hover > .dropdown-menu{
         position: absolute;
